--- a/apps/landing/src/app/section/Backers/index.css
+++ b/apps/landing/src/app/section/Backers/index.css
@@ -21,7 +21,7 @@
 }
 
 .backers-logo.waterdrip {
-    transform: translateY(12px);
+    transform: translateY(-12px) scale(1.3) translateX(2px);
 }
 
 .backers-logo.k300 {
