--- a/apps/landing/src/app/section/Backers/index.css
+++ b/apps/landing/src/app/section/Backers/index.css
@@ -1,9 +1,19 @@
 .backers-logo-container {
-    width: 150px;
-    height: 80px;
+    width: 190px;
+    height: 100px;
     padding: 6px 10px;
     background-color: #384b7080;
     border-radius: 10px;
+
+    @media screen and (max-width: 465px) {
+        width: 150px;
+        height: 80px;
+    }
+
+    @media screen and (max-width: 375px) {
+        width: 130px;
+        height: 70px;
+    }
 }
 
 .backers-logo {
@@ -13,38 +23,71 @@
 }
 
 .backers-logo.animoca {
-    transform: translateY(-13px);
+    transform: translateY(-18px);
+
+    @media screen and (max-width: 375px) {
+        transform: translateY(-14px);
+    }
 }
 
 .backers-logo.ticker-img {
-    transform: translateY(-2px);
+    transform: translateY(-2px) scale(1.1);
 }
 
 .backers-logo.waterdrip {
-    transform: translateY(-12px) scale(1.3) translateX(2px);
+    transform: translateY(-18px) scale(1.3) translateX(2px);
+
+    @media screen and (max-width: 465px) {
+        transform: translateY(-14px) scale(1.3) translateX(3px);
+    }
 }
 
 .backers-logo.k300 {
-    padding: 20px;
+    padding: 25px;
     transform: translateY(-10px);
+
+    @media screen and (max-width: 465px) {
+        padding: 20px;
+        transform: translateY(-12px);
+    }
+
+    @media screen and (max-width: 375px) {
+        padding: 15px;
+        transform: translateY(-8px);
+    }
 }
 
 .backers-logo.capital-chain {
-    padding: 20px;
-    transform: translateY(-30px);
+    padding: 30px;
+    transform: translateY(-40px);
+
+    @media screen and (max-width: 465px) {
+        padding: 20px;
+        transform: translateY(-30px);
+    }
 }
 
 .backers-logo.nnbox {
-    padding: 25px;
-    transform: translateY(-20px);
+    padding: 30px;
+    transform: translateY(-25px);
+
+    @media screen and (max-width: 465px) {
+        padding: 20px;
+        transform: translateY(-18px);
+    }
 }
 
 .backers-logo.iotex {
-    transform: translateY(12px);
+    /* padding: 10px; */
+    transform: translateY(15px);
 }
 
 .backers-logo.cryptomind {
-    transform: translateY(20px);
+    transform: translateY(25px);
+
+    @media screen and (max-width: 465px) {
+        transform: translateY(18px);
+    }
 }
 
 .backers-logo.tada-img {
