--- a/apps/ride/src/supporting.css
+++ b/apps/ride/src/supporting.css
@@ -22,15 +22,15 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 20px;
     max-width: 1440px;
     width: 100%;
 }
 
 /* backers-logo-container 样式 */
 .backers-logo-container {
-    width: 220px;
-    height: 150px;
+    width: 270px;
+    height: 170px;
     padding: 6px 10px;
     background-color: #f5f5f5;
     border-radius: 10px;
@@ -39,7 +39,14 @@
     align-items: center;
 }
 
-@media screen and (max-width: 465px) {
+@media screen and (max-width:608px) {
+    .backers-logo-container {
+        width: 200px;
+        height: 120px;
+    }
+}
+
+@media screen and (max-width: 466px) {
     .backers-logo-container {
         width: 150px;
         height: 80px;
@@ -73,15 +80,21 @@
 
 .backers-logo.ticker-img {
     transform: translateY(-2px) scale(1.1);
+    filter: none;
 }
 
 .backers-logo.waterdrip {
-    transform: scale(1.3) translateX(2px);
+    /* transform: translateX(2px) scale(1.3); */
+    /* image-rendering: crisp-edges; */
+    /* 或 'pixelated' */
+    width: 130% !important;
+    max-width: 130% !important;
+
 }
 
 @media screen and (max-width: 465px) {
     .backers-logo.waterdrip {
-        transform: scale(1.3) translateX(3px);
+        /* transform: scale(1.3) translateX(3px); */
     }
 }
 
@@ -143,8 +156,10 @@
 }
 
 .backers-logo.tada-img {
-    padding: 10px;
+    padding: 40px;
     /* transform: translateY(-6px); */
+    /* 纯黑白 */
+    filter: grayscale(100%) brightness(0%);
 }
 
 .backers-logo.mvl-img {
