--- a/apps/ride/src/supporting.css
+++ b/apps/ride/src/supporting.css
@@ -22,15 +22,19 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 100px;
     max-width: 1440px;
     width: 100%;
+
+    @media screen and (max-width: 1440px) {
+        gap: 50px;
+    }
 }
 
 /* backers-logo-container 样式 */
 .backers-logo-container {
-    width: 320px;
-    height: 200px;
+    width: 250px;
+    height: 150px;
     padding: 6px 10px;
     background-color: #f5f5f5;
     border-radius: 10px;
